--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "A god damn description",
   "main": "server.js",
   "scripts": {
     "test": "mocha"
@@ -16,12 +16,13 @@
   "bugs": {
     "url": "https://github.com/Eduatlas/backend/issues"
   },
-  "homepage": "https://github.com/Eduatlas/backend#readme",
+  "homepage": "c",
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
